[metadata]
name = django-docme
version = 0.1.2
description = A Django app that help you create your docs not coding it ! .
long_description = file: README.rst
url = https://www.zarqizoubir.github.io/
author = Ezzoubair Zarqi
author_email = zarqi.ezzoubair@etu.uae.ac.ma
license = Mit  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.0  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    asgiref >=3.7.2
    Django >=4.2.2
    django-cors-headers >=4.1.0
    django-mdeditor >=0.1.20
    djangorestframework >=3.14.0
    pytz >=2023.3
    sqlparse >=0.4.4
    typing_extensions >=4.6.3